// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> should render placeholders if forced to 1`] = `
<Image
  alt={null}
  animating={true}
  backgroundColor="#f2f2f2"
  className=""
  classNameImg=""
  forcePlaceholder={true}
  highestResolutionLoaded={[Function]}
  onError={null}
  onLoad={null}
  ratio={null}
  resolutions={
    Array [
      Object {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="foo/bar"
  srcmap={null}
  transition={null}
  unwrapped={false}
>
  <div
    className="css-vfdozt "
  />
</Image>
`;

exports[`<Image /> should render placeholders if src is null 1`] = `
<Image
  alt={null}
  animating={true}
  backgroundColor="#f2f2f2"
  className=""
  classNameImg=""
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  onError={null}
  onLoad={null}
  ratio={null}
  resolutions={
    Array [
      Object {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="foo/bar"
  srcmap={null}
  transition={null}
  unwrapped={false}
>
  <div
    className="css-vfdozt "
  >
    <img
      alt={null}
      aria-label={null}
      className="css-f45h63"
      data-test-id="image"
      role="presentation"
      src="foo/bar"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</Image>
`;
